Removed the unnecessary stuff from gtk-3.

--- a/common/gtk-3.0/3.20/sass/gtk.scss
+++ b/common/gtk-3.0/3.20/sass/gtk.scss
@@ -1,6 +1,6 @@
 $variant: 'light';
-$darker: 'false';
-$transparency: 'true';
+$darker: 'true';
+$transparency: 'false';
 
 @import 'colors';
 @import 'drawing';
