--- a/common/gtk-3.0/3.20/gtk.css
+++ b/common/gtk-3.0/3.20/gtk.css
@@ -881,7 +881,7 @@ toolbar, .inline-toolbar {
     margin-right: 0; }
 
 .primary-toolbar:not(.libreoffice-toolbar) {
-  color: rgba(168, 148, 148, 0.8);
+  color: #9e9e9e;
   background-color: #121212;
   box-shadow: none;
   border-width: 0 0 1px 0;
@@ -915,7 +915,7 @@ headerbar,
   border-width: 0 0 1px;
   border-style: solid;
   border-color: #080808;
-  color: rgba(168, 148, 148, 0.8);
+  color: #9e9e9e;
   background-color: #121212;
   box-shadow: inset 0 1px #1a1a1a; }
   .csd headerbar,
@@ -925,7 +925,7 @@ headerbar,
   headerbar:backdrop,
   .titlebar:backdrop:not(headerbar) {
     transition: 200ms ease-out;
-    color: rgba(168, 148, 148, 0.5);
+    color: rgba(158, 158, 158, 0.7);
     background-color: #161616; }
     .csd headerbar:backdrop,
     .csd .titlebar:backdrop:not(headerbar) {
@@ -1033,12 +1033,12 @@ window.csd > .titlebar:not(headerbar):backdrop {
   min-height: 1px;
   background: none;
   border-width: 0 1px;
-  border-image: linear-gradient(to bottom, rgba(168, 148, 148, 0) 25%, rgba(168, 148, 148, 0.15) 25%, rgba(168, 148, 148, 0.15) 75%, rgba(168, 148, 148, 0) 75%) 0 1/0 1px stretch; }
+  border-image: linear-gradient(to bottom, rgba(158, 158, 158, 0) 25%, rgba(158, 158, 158, 0.35) 25%, rgba(158, 158, 158, 0.35) 75%, rgba(158, 158, 158, 0) 75%) 0 1/0 1px stretch; }
   .primary-toolbar:not(.libreoffice-toolbar) separator:backdrop, headerbar separator.titlebutton:backdrop, .titlebar:not(headerbar) separator.titlebutton:backdrop {
     opacity: 0.6; }
 
 .primary-toolbar entry, headerbar entry {
-  color: rgba(168, 148, 148, 0.8);
+  color: #9e9e9e;
   border-color: rgba(0, 0, 0, 0.4);
   background-color: rgba(74, 74, 74, 0.4); }
   .primary-toolbar entry image, headerbar entry image, .primary-toolbar entry image:hover, headerbar entry image:hover {
@@ -1053,7 +1053,7 @@ window.csd > .titlebar:not(headerbar):backdrop {
     .primary-toolbar entry:focus image, headerbar entry:focus image {
       color: #121212; }
   .primary-toolbar entry:disabled, headerbar entry:disabled {
-    color: rgba(168, 148, 148, 0.35);
+    color: rgba(158, 158, 158, 0.55);
     border-color: rgba(0, 0, 0, 0.4);
     background-color: rgba(74, 74, 74, 0.25); }
   .primary-toolbar entry selection:focus, headerbar entry selection:focus {
@@ -1085,14 +1085,14 @@ window.csd > .titlebar:not(headerbar):backdrop {
       color: #ac4142; }
 
 .primary-toolbar button, headerbar button {
-  color: rgba(168, 148, 148, 0.8);
+  color: #9e9e9e;
   outline-offset: -3px;
   background-color: rgba(18, 18, 18, 0);
   border-color: rgba(18, 18, 18, 0); }
   .primary-toolbar button:backdrop, headerbar button:backdrop {
     opacity: 0.7; }
   .primary-toolbar button:hover, headerbar button:hover {
-    color: rgba(168, 148, 148, 0.8);
+    color: #9e9e9e;
     border-color: rgba(0, 0, 0, 0.4);
     background-color: rgba(74, 74, 74, 0.4); }
   .primary-toolbar button:active, headerbar button:active, .primary-toolbar button:checked, headerbar button:checked {
@@ -1104,7 +1104,7 @@ window.csd > .titlebar:not(headerbar):backdrop {
     background-color: rgba(18, 18, 18, 0);
     border-color: rgba(18, 18, 18, 0); }
     .primary-toolbar button:disabled label, headerbar button:disabled label, .primary-toolbar button:disabled, headerbar button:disabled {
-      color: rgba(168, 148, 148, 0.35); }
+      color: rgba(158, 158, 158, 0.55); }
   .primary-toolbar button:disabled:active, headerbar button:disabled:active, .primary-toolbar button:disabled:checked, headerbar button:disabled:checked {
     color: rgba(18, 18, 18, 0.75);
     border-color: rgba(112, 32, 32, 0.65);
@@ -1128,7 +1128,7 @@ window.csd > .titlebar:not(headerbar):backdrop {
   box-shadow: none; }
 
 .primary-toolbar .linked:not(.vertical):not(.path-bar).stack-switcher > button, headerbar .linked:not(.vertical):not(.path-bar).stack-switcher > button, .primary-toolbar .linked:not(.vertical).path-bar > button, headerbar .linked:not(.vertical).path-bar > button {
-  color: rgba(168, 148, 148, 0.8);
+  color: #9e9e9e;
   border-color: rgba(0, 0, 0, 0.4);
   background-color: rgba(74, 74, 74, 0.4); }
   .primary-toolbar .linked:not(.vertical):not(.path-bar).stack-switcher > button:hover, headerbar .linked:not(.vertical):not(.path-bar).stack-switcher > button:hover, .primary-toolbar .linked:not(.vertical).path-bar > button:hover, headerbar .linked:not(.vertical).path-bar > button:hover {
@@ -1138,7 +1138,7 @@ window.csd > .titlebar:not(headerbar):backdrop {
     border-color: transparent;
     background-color: #702020; }
   .primary-toolbar .linked:not(.vertical):not(.path-bar).stack-switcher > button:disabled, headerbar .linked:not(.vertical):not(.path-bar).stack-switcher > button:disabled, .primary-toolbar .linked:not(.vertical).path-bar > button:disabled, headerbar .linked:not(.vertical).path-bar > button:disabled {
-    color: rgba(168, 148, 148, 0.4); }
+    color: rgba(158, 158, 158, 0.6); }
 
 .primary-toolbar .linked:not(.vertical):not(.path-bar).stack-switcher > button + button, headerbar .linked:not(.vertical):not(.path-bar).stack-switcher > button + button, .primary-toolbar .linked:not(.vertical).path-bar > button + button, headerbar .linked:not(.vertical).path-bar > button + button {
   border-left-style: none; }
@@ -1215,7 +1215,7 @@ window.csd > .titlebar:not(headerbar):backdrop {
     background-color: rgba(18, 18, 18, 0);
     border-color: rgba(18, 18, 18, 0); }
     .primary-toolbar button.suggested-action.flat:disabled label, headerbar button.suggested-action.flat:disabled label, .primary-toolbar button.suggested-action.sidebar-button:disabled label, headerbar button.suggested-action.sidebar-button:disabled label, .primary-toolbar button.suggested-action.flat:disabled, headerbar button.suggested-action.flat:disabled, .primary-toolbar button.suggested-action.sidebar-button:disabled, headerbar button.suggested-action.sidebar-button:disabled, .primary-toolbar button.suggested-action:disabled label, headerbar button.suggested-action:disabled label, .primary-toolbar button.suggested-action:disabled, headerbar button.suggested-action:disabled {
-      color: rgba(168, 148, 148, 0.35); }
+      color: rgba(158, 158, 158, 0.55); }
 
 .primary-toolbar button.suggested-action:backdrop, headerbar button.suggested-action:backdrop, .primary-toolbar button.suggested-action:backdrop, headerbar button.suggested-action:backdrop {
   opacity: 0.8; }
@@ -1244,7 +1244,7 @@ window.csd > .titlebar:not(headerbar):backdrop {
     background-color: rgba(18, 18, 18, 0);
     border-color: rgba(18, 18, 18, 0); }
     .primary-toolbar button.destructive-action.flat:disabled label, headerbar button.destructive-action.flat:disabled label, .primary-toolbar button.destructive-action.sidebar-button:disabled label, headerbar button.destructive-action.sidebar-button:disabled label, .primary-toolbar button.destructive-action.flat:disabled, headerbar button.destructive-action.flat:disabled, .primary-toolbar button.destructive-action.sidebar-button:disabled, headerbar button.destructive-action.sidebar-button:disabled, .primary-toolbar button.destructive-action:disabled label, headerbar button.destructive-action:disabled label, .primary-toolbar button.destructive-action:disabled, headerbar button.destructive-action:disabled {
-      color: rgba(168, 148, 148, 0.35); }
+      color: rgba(158, 158, 158, 0.55); }
 
 .primary-toolbar button.destructive-action:backdrop, headerbar button.destructive-action:backdrop, .primary-toolbar button.destructive-action:backdrop, headerbar button.destructive-action:backdrop {
   opacity: 0.8; }
@@ -1254,7 +1254,7 @@ window.csd > .titlebar:not(headerbar):backdrop {
   caret-color: #121212; }
 
 .primary-toolbar spinbutton:not(.vertical) button, headerbar spinbutton:not(.vertical) button, .primary-toolbar spinbutton:not(.vertical) button:disabled, headerbar spinbutton:not(.vertical) button:disabled {
-  color: rgba(168, 148, 148, 0.8);
+  color: #9e9e9e;
   border-color: rgba(0, 0, 0, 0.4);
   background-color: rgba(74, 74, 74, 0.4); }
 
@@ -1267,7 +1267,7 @@ window.csd > .titlebar:not(headerbar):backdrop {
   background-color: #702020; }
 
 .primary-toolbar spinbutton:not(.vertical) button:disabled, headerbar spinbutton:not(.vertical) button:disabled {
-  color: rgba(168, 148, 148, 0.4); }
+  color: rgba(158, 158, 158, 0.6); }
 
 .primary-toolbar spinbutton:not(.vertical) > button + button, headerbar spinbutton:not(.vertical) > button + button {
   border-left-style: none; }
@@ -1285,10 +1285,10 @@ window.csd > .titlebar:not(headerbar):backdrop {
   border-left-color: rgba(0, 0, 0, 0.4); }
 
 .primary-toolbar combobox:disabled, headerbar combobox:disabled {
-  color: rgba(168, 148, 148, 0.2); }
+  color: rgba(158, 158, 158, 0.4); }
 
 .primary-toolbar combobox > .linked > button.combo, headerbar combobox > .linked > button.combo {
-  color: rgba(168, 148, 148, 0.8);
+  color: #9e9e9e;
   border-color: rgba(0, 0, 0, 0.4);
   background-color: rgba(74, 74, 74, 0.4); }
   .primary-toolbar combobox > .linked > button.combo image, headerbar combobox > .linked > button.combo image, .primary-toolbar combobox > .linked > button.combo image:hover, headerbar combobox > .linked > button.combo image:hover {
@@ -1299,7 +1299,7 @@ window.csd > .titlebar:not(headerbar):backdrop {
     background-color: #702020;
     box-shadow: none; }
   .primary-toolbar combobox > .linked > button.combo:disabled, headerbar combobox > .linked > button.combo:disabled {
-    color: rgba(168, 148, 148, 0.35);
+    color: rgba(158, 158, 158, 0.55);
     border-color: rgba(0, 0, 0, 0.4);
     background-color: rgba(74, 74, 74, 0.25); }
 
@@ -1477,10 +1477,10 @@ menubar,
   -GtkWidget-window-dragging: true;
   padding: 0px;
   background-color: #121212;
-  color: rgba(168, 148, 148, 0.8); }
+  color: #9e9e9e; }
   menubar:backdrop,
   .menubar:backdrop {
-    color: rgba(168, 148, 148, 0.5); }
+    color: rgba(158, 158, 158, 0.7); }
   menubar > menuitem,
   .menubar > menuitem {
     padding: 4px 8px;
@@ -1492,7 +1492,7 @@ menubar,
       color: #121212; }
     menubar > menuitem:disabled,
     .menubar > menuitem:disabled {
-      color: rgba(168, 148, 148, 0.2);
+      color: rgba(158, 158, 158, 0.4);
       border-color: transparent; }
 
 menu,
@@ -2904,7 +2904,7 @@ headerbar button.titlebutton,
   background-color: rgba(18, 18, 18, 0); }
   headerbar button.titlebutton:hover,
   .titlebar button.titlebutton:hover {
-    color: rgba(168, 148, 148, 0.8);
+    color: #9e9e9e;
     border-color: rgba(0, 0, 0, 0.4);
     background-color: rgba(74, 74, 74, 0.4); }
   headerbar button.titlebutton:active, headerbar button.titlebutton:checked,
@@ -3063,7 +3063,7 @@ popover.background label.nautilus-canvas-item.separator, headerbar .nautilus-can
 
 @keyframes needs_attention_keyframes {
   0% {
-    color: rgba(168, 148, 148, 0.8);
+    color: #9e9e9e;
     border-color: rgba(0, 0, 0, 0.4);
     background-color: rgba(74, 74, 74, 0.4); }
   100% {
@@ -3103,7 +3103,7 @@ popover.background label.nautilus-canvas-item.separator, headerbar .nautilus-can
   background-color: #121212; }
 
 .nemo-window .primary-toolbar widget.raised.linked:not(.vertical):not(.path-bar) > button {
-  color: rgba(168, 148, 148, 0.8);
+  color: #9e9e9e;
   border-color: rgba(0, 0, 0, 0.4);
   background-color: rgba(74, 74, 74, 0.4); }
   .nemo-window .primary-toolbar widget.raised.linked:not(.vertical):not(.path-bar) > button:not(:last-child):not(:only-child) {
@@ -3115,7 +3115,7 @@ popover.background label.nautilus-canvas-item.separator, headerbar .nautilus-can
     border-color: transparent;
     background-color: #702020; }
   .nemo-window .primary-toolbar widget.raised.linked:not(.vertical):not(.path-bar) > button:disabled {
-    color: rgba(168, 148, 148, 0.4); }
+    color: rgba(158, 158, 158, 0.6); }
 
 .nemo-window .primary-toolbar widget.raised.linked:not(.vertical):not(.path-bar) > button + button {
   border-left-style: none; }
@@ -3564,7 +3564,7 @@ panel-toplevel.background button:not(#tasklist-button), .xfce4-panel.panel butto
   border-radius: 3px;
   padding-left: 4px;
   padding-right: 4px;
-  color: rgba(168, 148, 148, 0.8);
+  color: #9e9e9e;
   border-color: rgba(0, 0, 0, 0.4);
   background-color: rgba(74, 74, 74, 0.4); }
   .marlin-pathbar.pathbar image, .marlin-pathbar.pathbar image:hover {
@@ -3574,7 +3574,7 @@ panel-toplevel.background button:not(#tasklist-button), .xfce4-panel.panel butto
     border-color: transparent;
     background-color: #702020; }
   .marlin-pathbar.pathbar:disabled {
-    color: rgba(168, 148, 148, 0.35);
+    color: rgba(158, 158, 158, 0.55);
     border-color: rgba(0, 0, 0, 0.4);
     background-color: rgba(74, 74, 74, 0.25); }
   .marlin-pathbar.pathbar:active, .marlin-pathbar.pathbar:checked {
@@ -3657,11 +3657,11 @@ UnityDecoration {
     border-radius: 4px 4px 0 0;
     padding: 1px 6px 0 6px;
     background-image: linear-gradient(to bottom, #121212, #121212);
-    color: rgba(168, 148, 148, 0.8);
+    color: #9e9e9e;
     box-shadow: inset 0 1px #1a1a1a; }
     UnityDecoration .top:backdrop {
       border-bottom-width: 0;
-      color: rgba(168, 148, 148, 0.5); }
+      color: rgba(158, 158, 158, 0.7); }
   UnityDecoration .left, UnityDecoration .right, UnityDecoration .bottom,
   UnityDecoration .left:backdrop, UnityDecoration .right:backdrop, UnityDecoration .bottom:backdrop {
     background-color: transparent;
@@ -4283,8 +4283,8 @@ filechooser placessidebar.sidebar scrollbar,
 @define-color placeholder_text_color #A8A8A8;
 @define-color link_color #ac4142;
 @define-color content_view_bg #121212;
-@define-color wm_title alpha(#a89494, 0.8);
-@define-color wm_unfocused_title alpha(#a89494, 0.5);
+@define-color wm_title alpha(#9e9e9e, 0.8);
+@define-color wm_unfocused_title alpha(#9e9e9e, 0.5);
 @define-color wm_bg #121212;
 @define-color wm_bg_unfocused #161616;
 @define-color wm_highlight #1a1a1a;
