--- a/common/gtk-3.0/3.20/sass/_colors.scss
+++ b/common/gtk-3.0/3.20/sass/_colors.scss
@@ -39,7 +39,7 @@ $header_bg_backdrop: lighten($header_bg, 1.5%);
 
 $header_border: darken($header_bg, 4%);
 
-$header_fg: saturate(transparentize($fg_color, 0.2), 10%);
+$header_fg: $fg_color;
 
 $dark_sidebar_bg: #121212;
 $dark_sidebar_fg: #9e9e9e;
