--- a/common/gtk-3.0/3.20/sass/_colors.scss
+++ b/common/gtk-3.0/3.20/sass/_colors.scss
@@ -26,7 +26,7 @@ $destructive_color: #ac4142;
 $suggested_color: #702020;
 $destructive_fg_color: #9e9e9e;
 $suggested_fg_color: #9e9e9e;
-
+$infobar_info_bg_color: #6a9fb5;
 $drop_target_color: #f4bf75;
 
 //insensitive state derived colors
