--- a/common/gtk-3.0/3.20/sass/_common.scss
+++ b/common/gtk-3.0/3.20/sass/_common.scss
@@ -2816,7 +2816,6 @@ infobar {
   &.question,
   &.warning,
   &.error {
-    background-color: $selected_bg_color;
     color: $selected_fg_color;
     caret-color: currentColor;
 
@@ -2828,6 +2827,22 @@ infobar {
     }
 
     *:link { @extend %link_selected; }
+  }
+
+  &.info {
+      background-color: $infobar_info_bg_color;
+  }
+
+  &.question {
+      background-color: $success_color;
+  }
+
+  &.warning {
+      background-color: $warning_color;
+  }
+
+  &.error {
+      background-color: $error_color;
   }
 }
 
